made the featured section responsive for small devices

--- a/style.css
+++ b/style.css
@@ -101,6 +101,8 @@
     border: none;
     border-top-right-radius: 300px;
     border-top-left-radius: 300px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     background-color: rgba(167, 33, 98, 0.15);
 }
 
@@ -108,6 +110,8 @@
     border: none;
     border-top-right-radius: 300px;
     border-top-left-radius: 300px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     background-color: rgba(5, 151, 160, 0.15);
 }
 
@@ -115,10 +119,12 @@
     border: none;
     border-top-right-radius: 300px;
     border-top-left-radius: 300px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     background-color: rgba(71, 125, 17, 0.15);
 }
 
-.flower-image>{
+.flower-image>img{
     width: 100%;
 }
 
@@ -154,5 +160,24 @@
 
     .hero-image{
         max-width: 100%; 
+    }
+
+    /* featured-section styles for small devices */
+
+    .featured-section{
+        margin: 80px auto;
+
+    }
+
+    .flowers-container{
+        flex-direction: column;
+        gap: 40px;
+    }
+    .flower1,
+    .flower2,
+    .flower3{
+    text-align: center;
+    width: 100%;
+    padding-bottom: 40px;
     }
 }
