--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@
     margin: 0px auto;
     background-color: rgba(39, 39, 39, 0.05);
     padding-top: 80px;
+    padding-bottom: 30px;
 }
 
 .service-container{
@@ -206,5 +207,12 @@
     text-align: center;
     width: 100%;
     padding-bottom: 40px;
+    }
+
+    /* services-section styles for small devices */
+
+    .service-container{
+        flex-direction: column;
+        gap: 80px;
     }
 }
