--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@
 .flower-gallery{
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 /* responsive styles for small devices */
@@ -216,7 +217,7 @@
     }
 
     .hero-title{
-        font-size: 2rem;
+        font-size: 2.7rem;
     }
 
     .hero-description{
@@ -261,5 +262,16 @@
         gap: 60px;
         margin: 80px auto;
         padding: 40px 0px;
+    }
+
+    /* insta-section styles for small devices */
+
+    .flower-gallery{
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .insta-description{
+        margin-bottom: 60px;
     }
 }
