--- a/style.css
+++ b/style.css
@@ -201,6 +201,55 @@
     align-items: center;
 }
 
+/* latest-deals-section styles */
+
+.latest-deals-section{
+    max-width: 1440px;
+    height: 450px;
+    margin: 180px auto;
+    background-image: url("images/Rectangle\ 9.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.latest-deals-texts{
+    text-align: center;
+}
+
+.latest-deals-title{
+    margin-top: 0px;
+}
+
+.latest-deals-description{
+    margin-bottom: 48px;
+}
+
+.latest-deals-form{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+.email-field{
+    width: 700px;
+    height: 64px;
+    background-color: rgba(255, 255, 255, 1);
+    border: none;
+    border-radius: 8px;
+}
+
+.email-field::placeholder{
+    color: rgba(39, 39, 39, 0.6);
+    font-size: 1.125rem;
+    font-weight: 400;
+    padding-left: 22px;
+}
+
 /* responsive styles for small devices */
 
 @media screen and (max-width: 576px) {
