--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
     max-width: 1920px;
     margin: 0 auto;
     padding: 60px 0px;
+    border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -101,8 +102,8 @@
     border: none;
     border-top-right-radius: 300px;
     border-top-left-radius: 300px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 300px;
+    border-bottom-right-radius: 300px;
     background-color: rgba(167, 33, 98, 0.15);
 }
 
@@ -110,8 +111,8 @@
     border: none;
     border-top-right-radius: 300px;
     border-top-left-radius: 300px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 300px;
+    border-bottom-right-radius: 300px;
     background-color: rgba(5, 151, 160, 0.15);
 }
 
@@ -119,8 +120,8 @@
     border: none;
     border-top-right-radius: 300px;
     border-top-left-radius: 300px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 300px;
+    border-bottom-right-radius: 300px;
     background-color: rgba(71, 125, 17, 0.15);
 }
 
@@ -139,6 +140,7 @@
 .services-section{
     max-width: 1440px;
     margin: 0px auto;
+    border-radius: 20px;
     background-color: rgba(39, 39, 39, 0.05);
     padding-top: 80px;
     padding-bottom: 30px;
@@ -169,6 +171,7 @@
     max-width: 1920px;
     margin: 180px auto;
     padding: 100px 0px;
+    border-radius: 20px;
     background-color: rgba(229, 84, 115, 0.05);
     display: flex;
     gap: 180px;
@@ -195,10 +198,18 @@
     text-align: center;
 }
 
+.insta-title{
+    margin-top: 0px;
+}
+
 .flower-gallery{
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.flower-photo>img{
+    border-radius: 20px;
 }
 
 /* latest-deals-section styles */
@@ -207,6 +218,7 @@
     max-width: 1440px;
     height: 450px;
     margin: 180px auto;
+    border-radius: 20px;
     background-image: url("images/Rectangle\ 9.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -256,6 +268,7 @@
     max-width: 1920px;
     height: 450px;
     margin: 0 auto;
+    border-radius: 20px;
     background-color: rgba(17, 16, 16, 1);
     display: flex;
     justify-content: center;
@@ -270,6 +283,7 @@
     color: rgba(255, 255, 255, 1);
     font-size: 3rem;
     font-weight: 800;
+    margin-top: 0px;
     margin-bottom: 24px;
 }
 
@@ -337,6 +351,33 @@
     padding-bottom: 40px;
     }
 
+    .flower1{
+        border: none;
+        border-top-right-radius: 20px;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 300px;
+        border-bottom-right-radius: 300px;
+        background-color: rgba(167, 33, 98, 0.15);
+    }
+    
+    .flower2{
+        border: none;
+        border-top-right-radius: 300px;
+        border-top-left-radius: 300px;
+        border-bottom-left-radius: 300px;
+        border-bottom-right-radius: 300px;
+        background-color: rgba(5, 151, 160, 0.15);
+    }
+    
+    .flower3{
+        border: none;
+        border-top-right-radius: 300px;
+        border-top-left-radius: 300px;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        background-color: rgba(71, 125, 17, 0.15);
+    }
+
     /* services-section styles for small devices */
 
     .service-container{
@@ -379,5 +420,10 @@
 
     .email-field{
         width: 350px;
+    }
+
+    /* footer-section styles for small devices */
+    .footer-description{
+        padding: 10px;
     }
 }
